# Atomic-Pow-Api

./: .env.example  .gitignore  .pip_install_sh  README.md  fottuto_chatbot.py  pyproject.toml  test.py
atomic_agent/: agent.py  agent_old.py  loader.py  main_fastapi.py  main_shell.py  main_v2_FAPI.py  prompt.py  vectorstore.py
